fix: markdown lists not showing correctly

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,9 +64,21 @@
   .markdown ul {
     list-style-type: disc;
   }
-  .markdown li {
-    margin-left: 2rem;
+  .markdown ol {
+    list-style-type: decimal;
   }
+  .markdown ol li {
+    position: relative;
+    padding-left: 1rem;
+    margin-left: 1rem;
+  }
+
+  .markdown ul li {
+    position: relative;
+    padding-left: 0.75rem;
+    margin-left: 1.25rem;
+  }
+
   .markdown li:last-child {
     margin-bottom: 1rem;
   }
